--- a/src/components/ProfileHeader/ProfileHeader.module.scss
+++ b/src/components/ProfileHeader/ProfileHeader.module.scss
@@ -17,7 +17,7 @@
     max-width: 75%;
     margin: 2rem auto;
 
-    @media screen and (min-width: $size-xs) {
+    @media screen and (min-width: $size-xxs) {
         max-width: 50%;
     }
 
