--- a/src/styles/Config.scss
+++ b/src/styles/Config.scss
@@ -9,7 +9,8 @@ $font-body: 'Open Sans', sans-serif;
 $radius: 1rem;
 $max-width: 90rem;
 
-$size-xs: 30rem;
+$size-xxs: 30rem;
+$size-xs: 48rem;
 $size-sm: 68rem;
 $size-md: 75rem;
 $size-lg: 80rem;
