--- a/src/styles/Styles.scss
+++ b/src/styles/Styles.scss
@@ -10,12 +10,6 @@
     --font-headline: #{$font-headline};
     --font-body: #{$font-body};
     --max-width: #{$max-width};
-    --size-xs: #{$size-xs};
-    --size-sm: #{$size-sm};
-    --size-md: #{$size-md};
-    --size-lg: #{$size-lg};
-    --size-xl: #{$size-xl};
-    --size-xxl: #{$size-xxl};
 }
 
 body {
